parser/ql_parser.go
// Code generated from parser/QlParser.g4 by ANTLR 4.9.2. DO NOT EDIT.

package parser // QlParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "','", "'.'", "'('", "')'", "", "'+'", "'-'", "'/'", "'%'", "'*'",
	"", "", "", "", "", "", "'s'", "'min'", "'h'", "'d'", "'w'", "'m'", "'q'",
	"'y'",
}
var symbolicNames = []string{
	"", "COMMA", "DOT", "LR_BRACKET", "RR_BRACKET", "ARITHMETIC_OPERATOR",
	"PLUS", "MINUS", "DIV", "MOD", "MUL", "SHOW", "AS", "FROM", "SINCE", "UNTIL",
	"TIMESPAN_UNIT", "SECONDS", "MINUTES", "HOURS", "DAYS", "WEEKS", "MONTHS",
	"QUARTERS", "YEARS", "IDENTIFIER", "SIGNED_NUMERIC_LITERAL", "NUMERIC_LITERAL",
	"YEAR", "MONTH", "DAY", "DATE_LITERAL", "SPACES",
}

var ruleNames = []string{
	"query", "show_stmt", "from_stmt", "since_stmt", "until_stmt", "operation_column",
	"result_column", "column_alias", "arithmetic_operation", "expr", "date_spec",
	"relative_date", "column_stmt",
}

type QlParser struct {
	*antlr.BaseParser
}

// NewQlParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *QlParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewQlParser(input antlr.TokenStream) *QlParser {
	this := new(QlParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "QlParser.g4"

	return this
}

// QlParser tokens.
const (
	QlParserEOF                    = antlr.TokenEOF
	QlParserCOMMA                  = 1
	QlParserDOT                    = 2
	QlParserLR_BRACKET             = 3
	QlParserRR_BRACKET             = 4
	QlParserARITHMETIC_OPERATOR    = 5
	QlParserPLUS                   = 6
	QlParserMINUS                  = 7
	QlParserDIV                    = 8
	QlParserMOD                    = 9
	QlParserMUL                    = 10
	QlParserSHOW                   = 11
	QlParserAS                     = 12
	QlParserFROM                   = 13
	QlParserSINCE                  = 14
	QlParserUNTIL                  = 15
	QlParserTIMESPAN_UNIT          = 16
	QlParserSECONDS                = 17
	QlParserMINUTES                = 18
	QlParserHOURS                  = 19
	QlParserDAYS                   = 20
	QlParserWEEKS                  = 21
	QlParserMONTHS                 = 22
	QlParserQUARTERS               = 23
	QlParserYEARS                  = 24
	QlParserIDENTIFIER             = 25
	QlParserSIGNED_NUMERIC_LITERAL = 26
	QlParserNUMERIC_LITERAL        = 27
	QlParserYEAR                   = 28
	QlParserMONTH                  = 29
	QlParserDAY                    = 30
	QlParserDATE_LITERAL           = 31
	QlParserSPACES                 = 32
)

// QlParser rules.
const (
	QlParserRULE_query                = 0
	QlParserRULE_show_stmt            = 1
	QlParserRULE_from_stmt            = 2
	QlParserRULE_since_stmt           = 3
	QlParserRULE_until_stmt           = 4
	QlParserRULE_operation_column     = 5
	QlParserRULE_result_column        = 6
	QlParserRULE_column_alias         = 7
	QlParserRULE_arithmetic_operation = 8
	QlParserRULE_expr                 = 9
	QlParserRULE_date_spec            = 10
	QlParserRULE_relative_date        = 11
	QlParserRULE_column_stmt          = 12
)

// IQueryContext is an interface to support dynamic dispatch.
type IQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsQueryContext differentiates from other interfaces.
	IsQueryContext()
}

type QueryContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryContext() *QueryContext {
	var p = new(QueryContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QlParserRULE_query
	return p
}

func (*QueryContext) IsQueryContext() {}

func NewQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryContext {
	var p = new(QueryContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QlParserRULE_query

	return p
}

func (s *QueryContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryContext) Show_stmt() IShow_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IShow_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IShow_stmtContext)
}

func (s *QueryContext) From_stmt() IFrom_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFrom_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFrom_stmtContext)
}

func (s *QueryContext) EOF() antlr.TerminalNode {
	return s.GetToken(QlParserEOF, 0)
}

func (s *QueryContext) Since_stmt() ISince_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISince_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISince_stmtContext)
}

func (s *QueryContext) Until_stmt() IUntil_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUntil_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUntil_stmtContext)
}

func (s *QueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.EnterQuery(s)
	}
}

func (s *QueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.ExitQuery(s)
	}
}

func (s *QueryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QlParserVisitor:
		return t.VisitQuery(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QlParser) Query() (localctx IQueryContext) {
	localctx = NewQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, QlParserRULE_query)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(26)
		p.Show_stmt()
	}
	{
		p.SetState(27)
		p.From_stmt()
	}
	p.SetState(29)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == QlParserSINCE {
		{
			p.SetState(28)
			p.Since_stmt()
		}

	}
	p.SetState(32)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == QlParserUNTIL {
		{
			p.SetState(31)
			p.Until_stmt()
		}

	}
	{
		p.SetState(34)
		p.Match(QlParserEOF)
	}

	return localctx
}

// IShow_stmtContext is an interface to support dynamic dispatch.
type IShow_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsShow_stmtContext differentiates from other interfaces.
	IsShow_stmtContext()
}

type Show_stmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyShow_stmtContext() *Show_stmtContext {
	var p = new(Show_stmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QlParserRULE_show_stmt
	return p
}

func (*Show_stmtContext) IsShow_stmtContext() {}

func NewShow_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Show_stmtContext {
	var p = new(Show_stmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QlParserRULE_show_stmt

	return p
}

func (s *Show_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *Show_stmtContext) SHOW() antlr.TerminalNode {
	return s.GetToken(QlParserSHOW, 0)
}

func (s *Show_stmtContext) AllColumn_stmt() []IColumn_stmtContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IColumn_stmtContext)(nil)).Elem())
	var tst = make([]IColumn_stmtContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IColumn_stmtContext)
		}
	}

	return tst
}

func (s *Show_stmtContext) Column_stmt(i int) IColumn_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IColumn_stmtContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IColumn_stmtContext)
}

func (s *Show_stmtContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(QlParserCOMMA)
}

func (s *Show_stmtContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(QlParserCOMMA, i)
}

func (s *Show_stmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Show_stmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Show_stmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.EnterShow_stmt(s)
	}
}

func (s *Show_stmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.ExitShow_stmt(s)
	}
}

func (s *Show_stmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QlParserVisitor:
		return t.VisitShow_stmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QlParser) Show_stmt() (localctx IShow_stmtContext) {
	localctx = NewShow_stmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, QlParserRULE_show_stmt)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(36)
		p.Match(QlParserSHOW)
	}
	{
		p.SetState(37)
		p.Column_stmt()
	}
	p.SetState(42)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == QlParserCOMMA {
		{
			p.SetState(38)
			p.Match(QlParserCOMMA)
		}
		{
			p.SetState(39)
			p.Column_stmt()
		}

		p.SetState(44)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IFrom_stmtContext is an interface to support dynamic dispatch.
type IFrom_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFrom_stmtContext differentiates from other interfaces.
	IsFrom_stmtContext()
}

type From_stmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFrom_stmtContext() *From_stmtContext {
	var p = new(From_stmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QlParserRULE_from_stmt
	return p
}

func (*From_stmtContext) IsFrom_stmtContext() {}

func NewFrom_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *From_stmtContext {
	var p = new(From_stmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QlParserRULE_from_stmt

	return p
}

func (s *From_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *From_stmtContext) FROM() antlr.TerminalNode {
	return s.GetToken(QlParserFROM, 0)
}

func (s *From_stmtContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(QlParserIDENTIFIER, 0)
}

func (s *From_stmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *From_stmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *From_stmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.EnterFrom_stmt(s)
	}
}

func (s *From_stmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.ExitFrom_stmt(s)
	}
}

func (s *From_stmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QlParserVisitor:
		return t.VisitFrom_stmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QlParser) From_stmt() (localctx IFrom_stmtContext) {
	localctx = NewFrom_stmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, QlParserRULE_from_stmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(45)
		p.Match(QlParserFROM)
	}
	{
		p.SetState(46)
		p.Match(QlParserIDENTIFIER)
	}

	return localctx
}

// ISince_stmtContext is an interface to support dynamic dispatch.
type ISince_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSince_stmtContext differentiates from other interfaces.
	IsSince_stmtContext()
}

type Since_stmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySince_stmtContext() *Since_stmtContext {
	var p = new(Since_stmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QlParserRULE_since_stmt
	return p
}

func (*Since_stmtContext) IsSince_stmtContext() {}

func NewSince_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Since_stmtContext {
	var p = new(Since_stmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QlParserRULE_since_stmt

	return p
}

func (s *Since_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *Since_stmtContext) SINCE() antlr.TerminalNode {
	return s.GetToken(QlParserSINCE, 0)
}

func (s *Since_stmtContext) Date_spec() IDate_specContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDate_specContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDate_specContext)
}

func (s *Since_stmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Since_stmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Since_stmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.EnterSince_stmt(s)
	}
}

func (s *Since_stmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.ExitSince_stmt(s)
	}
}

func (s *Since_stmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QlParserVisitor:
		return t.VisitSince_stmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QlParser) Since_stmt() (localctx ISince_stmtContext) {
	localctx = NewSince_stmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, QlParserRULE_since_stmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Match(QlParserSINCE)
	}
	{
		p.SetState(49)
		p.Date_spec()
	}

	return localctx
}

// IUntil_stmtContext is an interface to support dynamic dispatch.
type IUntil_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsUntil_stmtContext differentiates from other interfaces.
	IsUntil_stmtContext()
}

type Until_stmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUntil_stmtContext() *Until_stmtContext {
	var p = new(Until_stmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QlParserRULE_until_stmt
	return p
}

func (*Until_stmtContext) IsUntil_stmtContext() {}

func NewUntil_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Until_stmtContext {
	var p = new(Until_stmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QlParserRULE_until_stmt

	return p
}

func (s *Until_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *Until_stmtContext) UNTIL() antlr.TerminalNode {
	return s.GetToken(QlParserUNTIL, 0)
}

func (s *Until_stmtContext) Date_spec() IDate_specContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDate_specContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDate_specContext)
}

func (s *Until_stmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Until_stmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Until_stmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.EnterUntil_stmt(s)
	}
}

func (s *Until_stmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.ExitUntil_stmt(s)
	}
}

func (s *Until_stmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QlParserVisitor:
		return t.VisitUntil_stmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QlParser) Until_stmt() (localctx IUntil_stmtContext) {
	localctx = NewUntil_stmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, QlParserRULE_until_stmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.Match(QlParserUNTIL)
	}
	{
		p.SetState(52)
		p.Date_spec()
	}

	return localctx
}

// IOperation_columnContext is an interface to support dynamic dispatch.
type IOperation_columnContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOperation_columnContext differentiates from other interfaces.
	IsOperation_columnContext()
}

type Operation_columnContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOperation_columnContext() *Operation_columnContext {
	var p = new(Operation_columnContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QlParserRULE_operation_column
	return p
}

func (*Operation_columnContext) IsOperation_columnContext() {}

func NewOperation_columnContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Operation_columnContext {
	var p = new(Operation_columnContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QlParserRULE_operation_column

	return p
}

func (s *Operation_columnContext) GetParser() antlr.Parser { return s.parser }

func (s *Operation_columnContext) Arithmetic_operation() IArithmetic_operationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IArithmetic_operationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IArithmetic_operationContext)
}

func (s *Operation_columnContext) AS() antlr.TerminalNode {
	return s.GetToken(QlParserAS, 0)
}

func (s *Operation_columnContext) Column_alias() IColumn_aliasContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IColumn_aliasContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IColumn_aliasContext)
}

func (s *Operation_columnContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Operation_columnContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Operation_columnContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.EnterOperation_column(s)
	}
}

func (s *Operation_columnContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.ExitOperation_column(s)
	}
}

func (s *Operation_columnContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QlParserVisitor:
		return t.VisitOperation_column(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QlParser) Operation_column() (localctx IOperation_columnContext) {
	localctx = NewOperation_columnContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, QlParserRULE_operation_column)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(54)
		p.Arithmetic_operation()
	}
	p.SetState(57)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == QlParserAS {
		{
			p.SetState(55)
			p.Match(QlParserAS)
		}
		{
			p.SetState(56)
			p.Column_alias()
		}

	}

	return localctx
}

// IResult_columnContext is an interface to support dynamic dispatch.
type IResult_columnContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsResult_columnContext differentiates from other interfaces.
	IsResult_columnContext()
}

type Result_columnContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyResult_columnContext() *Result_columnContext {
	var p = new(Result_columnContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QlParserRULE_result_column
	return p
}

func (*Result_columnContext) IsResult_columnContext() {}

func NewResult_columnContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Result_columnContext {
	var p = new(Result_columnContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QlParserRULE_result_column

	return p
}

func (s *Result_columnContext) GetParser() antlr.Parser { return s.parser }

func (s *Result_columnContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(QlParserIDENTIFIER, 0)
}

func (s *Result_columnContext) AS() antlr.TerminalNode {
	return s.GetToken(QlParserAS, 0)
}

func (s *Result_columnContext) Column_alias() IColumn_aliasContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IColumn_aliasContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IColumn_aliasContext)
}

func (s *Result_columnContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Result_columnContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Result_columnContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.EnterResult_column(s)
	}
}

func (s *Result_columnContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.ExitResult_column(s)
	}
}

func (s *Result_columnContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QlParserVisitor:
		return t.VisitResult_column(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QlParser) Result_column() (localctx IResult_columnContext) {
	localctx = NewResult_columnContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, QlParserRULE_result_column)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(59)
		p.Match(QlParserIDENTIFIER)
	}
	p.SetState(62)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == QlParserAS {
		{
			p.SetState(60)
			p.Match(QlParserAS)
		}
		{
			p.SetState(61)
			p.Column_alias()
		}

	}

	return localctx
}

// IColumn_aliasContext is an interface to support dynamic dispatch.
type IColumn_aliasContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsColumn_aliasContext differentiates from other interfaces.
	IsColumn_aliasContext()
}

type Column_aliasContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyColumn_aliasContext() *Column_aliasContext {
	var p = new(Column_aliasContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QlParserRULE_column_alias
	return p
}

func (*Column_aliasContext) IsColumn_aliasContext() {}

func NewColumn_aliasContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Column_aliasContext {
	var p = new(Column_aliasContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QlParserRULE_column_alias

	return p
}

func (s *Column_aliasContext) GetParser() antlr.Parser { return s.parser }

func (s *Column_aliasContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(QlParserIDENTIFIER, 0)
}

func (s *Column_aliasContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Column_aliasContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Column_aliasContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.EnterColumn_alias(s)
	}
}

func (s *Column_aliasContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QlParserListener); ok {
		listenerT.ExitColumn_alias(s)
	}
}

func (s *Column_aliasContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QlParserVisitor:
		return t.VisitColumn_alias(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QlParser) Column_alias() (localctx IColumn_aliasContext) {
	localctx = NewColumn_aliasContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, QlParserRULE_column_alias)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(64)
		p.Match(QlParserIDENTIFIER)
	}

	return localctx
}

// IArithmetic_operationContext is an interface to support dynamic dispatch.
type IArithmetic_operationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsArithmetic_operationContext differentiates from other interfaces.
	IsArithmetic_operationContext()
}

type Arithmetic_operationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}
